# Edge_detection_viewer

./: .gitignore  ARCHITECTURE.md  COMPLETION_CHECKLIST.md  PDF_REQUIREMENTS_VERIFICATION.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  local.properties.example  settings.gradle
app/src/main/cpp/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  native-lib.cpp
app/src/main/java/com/example/edgedetection/: CameraManager.kt  GLRenderer.kt  ImageProcessingJNI.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: FrameViewer.ts  main.ts
